--- a/dnsmasq-tinylist.conf
+++ b/dnsmasq-tinylist.conf
@@ -1,296 +1,297 @@
-/a248.e.akamai.net/127.0.0.1#55
-/voa-11.akacast.akamaistream.net/127.0.0.1#55
-/bbc.co.uk/127.0.0.1#55
-/bbc.com/127.0.0.1#55
-/bbcchinese.com/127.0.0.1#55
-/cdninstagram.com/127.0.0.1#55
-/facebook.com/127.0.0.1#55
-/facebook.design/127.0.0.1#55
-/connect.facebook.net/127.0.0.1#55
-/fb.com/127.0.0.1#55
-/fb.me/127.0.0.1#55
-/instagram.com/127.0.0.1#55
-/m.me/127.0.0.1#55
-/messenger.com/127.0.0.1#55
-/oculus.com/127.0.0.1#55
-/oculuscdn.com/127.0.0.1#55
-/rocksdb.org/127.0.0.1#55
-/whatsapp.net/127.0.0.1#55
-/1e100.net/127.0.0.1#55
-/abc.xyz/127.0.0.1#55
-/admob.com/127.0.0.1#55
-/adsense.com/127.0.0.1#55
-/agoogleaday.com/127.0.0.1#55
-/ampproject.org/127.0.0.1#55
-/android.com/127.0.0.1#55
-/androidify.com/127.0.0.1#55
-/api.ai/127.0.0.1#55
-/appspot.com/127.0.0.1#55
-/blog.google/127.0.0.1#55
-/blogspot.com/127.0.0.1#55
-/blogspot.co.jp/127.0.0.1#55
-/blogspot.co.kr/127.0.0.1#55
-/blogspot.hk/127.0.0.1#55
-/blogspot.sg/127.0.0.1#55
-/certificate-transparency.org/127.0.0.1#55
-/chrome.com/127.0.0.1#55
-/chromecast.com/127.0.0.1#55
-/chromeexperiments.com/127.0.0.1#55
-/chromercise.com/127.0.0.1#55
-/chromestatus.com/127.0.0.1#55
-/chromium.org/127.0.0.1#55
-/com.google/127.0.0.1#55
-/creativelab5.com/127.0.0.1#55
-/data-vocabulary.org/127.0.0.1#55
-/debug.com/127.0.0.1#55
-/deepmind.com/127.0.0.1#55
-/deja.com/127.0.0.1#55
-/design.google/127.0.0.1#55
-/digisfera.com/127.0.0.1#55
-/domains.google/127.0.0.1#55
-/environment.google/127.0.0.1#55
-/feedburner.com/127.0.0.1#55
-/g.co/127.0.0.1#55
-/gcr.io/127.0.0.1#55
-/get.how/127.0.0.1#55
-/getmdl.io/127.0.0.1#55
-/ggpht.com/127.0.0.1#55
-/gmail.com/127.0.0.1#55
-/gmodules.com/127.0.0.1#55
-/godoc.org/127.0.0.1#55
-/golang.org/127.0.0.1#55
-/goo.gl/127.0.0.1#55
-/google.com/127.0.0.1#55
-/google.co.jp/127.0.0.1#55
-/google.co.kr/127.0.0.1#55
-/google.co.uk/127.0.0.1#55
-/google.com.hk/127.0.0.1#55
-/google.com.sg/127.0.0.1#55
-/google.com.tw/127.0.0.1#55
-/google.de/127.0.0.1#55
-/google.fr/127.0.0.1#55
-/google.io/127.0.0.1#55
-/google.it/127.0.0.1#55
-/google.ru/127.0.0.1#55
-/googleapis.cn/127.0.0.1#55
-/googleapis.com/127.0.0.1#55
-/googleapps.com/127.0.0.1#55
-/googleartproject.com/127.0.0.1#55
-/googleblog.com/127.0.0.1#55
-/googlebot.com/127.0.0.1#55
-/googlecapital.com/127.0.0.1#55
-/googlecode.com/127.0.0.1#55
-/googlecommerce.com/127.0.0.1#55
-/googledomains.com/127.0.0.1#55
-/googleearth.com/127.0.0.1#55
-/googledrive.com/127.0.0.1#55
-/googlegroups.com/127.0.0.1#55
-/googlehosted.com/127.0.0.1#55
-/googleideas.com/127.0.0.1#55
-/googleinsidesearch.com/127.0.0.1#55
-/googlelabs.com/127.0.0.1#55
-/googlemail.com/127.0.0.1#55
-/googleplay.com/127.0.0.1#55
-/googleplus.com/127.0.0.1#55
-/googlesource.com/127.0.0.1#55
-/googlesyndication.com/127.0.0.1#55
-/googleusercontent.com/127.0.0.1#55
-/googlevideo.com/127.0.0.1#55
-/googleweblight.com/127.0.0.1#55
-/googlezip.net/127.0.0.1#55
-/groups.google.cn/127.0.0.1#55
-/gstatic.com/127.0.0.1#55
-/gvt0.com/127.0.0.1#55
-/gvt1.com/127.0.0.1#55
-/@@redirector.gvt1.com/127.0.0.1#55
-/gvt3.com/127.0.0.1#55
-/gwtproject.org/127.0.0.1#55
-/html5rocks.com/127.0.0.1#55
-/iam.soy/127.0.0.1#55
-/igoogle.com/127.0.0.1#55
-/itasoftware.com/127.0.0.1#55
-/like.com/127.0.0.1#55
-/madewithcode.com/127.0.0.1#55
-/material.io/127.0.0.1#55
-/nic.google/127.0.0.1#55
-/on2.com/127.0.0.1#55
-/panoramio.com/127.0.0.1#55
-/picasaweb.com/127.0.0.1#55
-/pin-cong.com/127.0.0.1#55
-/polymer-project.org/127.0.0.1#55
-/questvisual.com/127.0.0.1#55
-/api.recaptcha.net/127.0.0.1#55
-/api-secure.recaptcha.net/127.0.0.1#55
-/api-verify.recaptcha.net/127.0.0.1#55
-/redhotlabs.com/127.0.0.1#55
-/registry.google/127.0.0.1#55
-/savethedate.foo/127.0.0.1#55
-/schema.org/127.0.0.1#55
-/shattered.io/127.0.0.1#55
-/|sipml5.org/127.0.0.1#55
-/stories.google/127.0.0.1#55
-/synergyse.com/127.0.0.1#55
-/teachparentstech.org/127.0.0.1#55
-/tensorflow.org/127.0.0.1#55
-/thinkwithgoogle.com/127.0.0.1#55
-/tiltbrush.com/127.0.0.1#55
-/waveprotocol.org/127.0.0.1#55
-/waymo.com/127.0.0.1#55
-/webmproject.org/127.0.0.1#55
-/webrtc.org/127.0.0.1#55
-/whatbrowser.org/127.0.0.1#55
-/widevine.com/127.0.0.1#55
-/withgoogle.com/127.0.0.1#55
-/xn--ngstr-lra8j.com/127.0.0.1#55
-/youtu.be/127.0.0.1#55
-/youtube.com/127.0.0.1#55
-/youtube-nocookie.com/127.0.0.1#55
-/youtubeeducation.com/127.0.0.1#55
-/youtubegaming.com/127.0.0.1#55
-/ytimg.com/127.0.0.1#55
-/zynamics.com/127.0.0.1#55
-/a1.nyt.com/127.0.0.1#55
-/int.nyt.com/127.0.0.1#55
-/s1.nyt.com/127.0.0.1#55
-/static01.nyt.com/127.0.0.1#55
-/typeface.nyt.com/127.0.0.1#55
-/nytchina.com/127.0.0.1#55
-/nytcn.me/127.0.0.1#55
-/nytco.com/127.0.0.1#55
-/|nyti.ms/127.0.0.1#55
-/nytimes.com/127.0.0.1#55
-/nytimg.com/127.0.0.1#55
-/userapi.nytlog.com/127.0.0.1#55
-/cn.nytstyle.com/127.0.0.1#55
-/nytstyle.com/127.0.0.1#55
-/t.me/127.0.0.1#55
-/updates.tdesktop.com/127.0.0.1#55
-/telegram.dog/127.0.0.1#55
-/telegram.me/127.0.0.1#55
-/telegram.org/127.0.0.1#55
-/telegramdownload.com/127.0.0.1#55
-/page.bid.yahoo.com/127.0.0.1#55
-/tw.bid.yahoo.com/127.0.0.1#55
-/blogs.yahoo.co.jp/127.0.0.1#55
-/search.yahoo.co.jp/127.0.0.1#55
-/buy.yahoo.com.tw/127.0.0.1#55
-/hk.yahoo.com/127.0.0.1#55
-/hk.knowledge.yahoo.com/127.0.0.1#55
-/hk.myblog.yahoo.com/127.0.0.1#55
-/news.yahoo.com/127.0.0.1#55
-/hk.news.yahoo.com/127.0.0.1#55
-/hk.rd.yahoo.com/127.0.0.1#55
-/hk.search.yahoo.com/127.0.0.1#55
-/hk.video.news.yahoo.com/127.0.0.1#55
-/meme.yahoo.com/127.0.0.1#55
-/tw.answers.yahoo.com/127.0.0.1#55
-/tw.knowledge.yahoo.com/127.0.0.1#55
-/tw.mall.yahoo.com/127.0.0.1#55
-/tw.yahoo.com/127.0.0.1#55
-/tw.mobi.yahoo.com/127.0.0.1#55
-/tw.myblog.yahoo.com/127.0.0.1#55
-/tw.news.yahoo.com/127.0.0.1#55
-/pulse.yahoo.com/127.0.0.1#55
-/upcoming.yahoo.com/127.0.0.1#55
-/video.yahoo.com/127.0.0.1#55
-/yahoo.com.hk/127.0.0.1#55
-/duckduckgo-owned-server.yahoo.net/127.0.0.1#55
-/video.ap.org/127.0.0.1#55
-/apkpure.com/127.0.0.1#55
-/archives.gov/127.0.0.1#55
-/archive.is/127.0.0.1#55
-/|archive.is/127.0.0.1#55
-/archive.fo/127.0.0.1#55
-/archive.org/127.0.0.1#55
-/bit.ly/127.0.0.1#55
-/|bit.ly/127.0.0.1#55
-/bloombergview.com/127.0.0.1#55
-/c-spanvideo.org/127.0.0.1#55
-/chinadigitaltimes.net/127.0.0.1#55
-/cnn.com/127.0.0.1#55
-/dm530.net/127.0.0.1#55
-/share.dmhy.org/127.0.0.1#55
-/dmm.co.jp/127.0.0.1#55
-/dmm.com/127.0.0.1#55
-/dropbox.com/127.0.0.1#55
-/duckduckgo.com/127.0.0.1#55
-/api.dropboxapi.com/127.0.0.1#55
-/dropboxusercontent.com/127.0.0.1#55
-/dw.com/127.0.0.1#55
-/dw.de/127.0.0.1#55
-/dw-world.com/127.0.0.1#55
-/dw-world.de/127.0.0.1#55
-/|dw-world.de/127.0.0.1#55
-/economist.com/127.0.0.1#55
-/fanqianghou.com/127.0.0.1#55
-/fc2.com/127.0.0.1#55
-/flipboard.com/127.0.0.1#55
-/gettyimages.com/127.0.0.1#55
-/git.io/127.0.0.1#55
-/gov.tw/127.0.0.1#55
-/hulu.com/127.0.0.1#55
-/huluim.com/127.0.0.1#55
-/idv.tw/127.0.0.1#55
-/ifanqiang.com/127.0.0.1#55
-/j.mp/127.0.0.1#55
-/kakao.com/127.0.0.1#55
-/kik.com/127.0.0.1#55
-/imgur.com/127.0.0.1#55
-/line.me/127.0.0.1#55
-/line-apps.com/127.0.0.1#55
-/line-scdn.net/127.0.0.1#55
-/onedrive.live.com/127.0.0.1#55
-/medium.com/127.0.0.1#55
-/mobile01.com/127.0.0.1#55
-/|mobile01.com/127.0.0.1#55
-/line.naver.jp/127.0.0.1#55
-/|www.nbc.com/127.0.0.1#55
-/netflix.com/127.0.0.1#55
-/nextmedia.com/127.0.0.1#55
-/nflximg.com/127.0.0.1#55
-/nflximg.net/127.0.0.1#55
-/nflxext.com/127.0.0.1#55
-/nflxso.net/127.0.0.1#55
-/nflxvideo.net/127.0.0.1#55
-/|dynupdate.no-ip.com/127.0.0.1#55
-/nyaa.si/127.0.0.1#55
-/on.cc/127.0.0.1#55
-/reuters.com/127.0.0.1#55
-/pastebin.com/127.0.0.1#55
-/video.pbs.org/127.0.0.1#55
-/pinterest.com/127.0.0.1#55
-/pixiv.net/127.0.0.1#55
-/rfi.fr/127.0.0.1#55
-/scmp.com/127.0.0.1#55
-/shadowsocks.org/127.0.0.1#55
-/shutterstock.com/127.0.0.1#55
-/snapchat.com/127.0.0.1#55
-/spotify.com/127.0.0.1#55
-/static-economist.com/127.0.0.1#55
-/t.co/127.0.0.1#55
-/theinitium.com/127.0.0.1#55
-/tumblr.com/127.0.0.1#55
-/forum.tvb.com/127.0.0.1#55
-/news.tvb.com/127.0.0.1#55
-/news.tvbs.com.tw/127.0.0.1#55
-/twimg.com/127.0.0.1#55
-/twitter.com/127.0.0.1#55
-/vid.me/127.0.0.1#55
-/vimeo.com/127.0.0.1#55
-/w3schools.com/127.0.0.1#55
-/wenxuecheng.com/127.0.0.1#55
-/wikileaks.ch/127.0.0.1#55
-/wikileaks.com/127.0.0.1#55
-/wikileaks.de/127.0.0.1#55
-/wikileaks.eu/127.0.0.1#55
-/wikileaks.lu/127.0.0.1#55
-/wikileaks.org/127.0.0.1#55
-/wikileaks.pl/127.0.0.1#55
-/wikileaks-forum.com/127.0.0.1#55
-/zh.wikinews.org/127.0.0.1#55
-/wuu.wikipedia.org/127.0.0.1#55
-/zh.m.wikipedia.org/127.0.0.1#55
-/zh.wikipedia.org/127.0.0.1#55
-/zh-yue.wikipedia.org/127.0.0.1#55
-/wsj.com/127.0.0.1#55
-/x-art.com/127.0.0.1#55
+
+server=/a248.e.akamai.net/127.0.0.1#55
+server=/voa-11.akacast.akamaistream.net/127.0.0.1#55
+server=/bbc.co.uk/127.0.0.1#55
+server=/bbc.com/127.0.0.1#55
+server=/bbcchinese.com/127.0.0.1#55
+server=/cdninstagram.com/127.0.0.1#55
+server=/facebook.com/127.0.0.1#55
+server=/facebook.design/127.0.0.1#55
+server=/connect.facebook.net/127.0.0.1#55
+server=/fb.com/127.0.0.1#55
+server=/fb.me/127.0.0.1#55
+server=/instagram.com/127.0.0.1#55
+server=/m.me/127.0.0.1#55
+server=/messenger.com/127.0.0.1#55
+server=/oculus.com/127.0.0.1#55
+server=/oculuscdn.com/127.0.0.1#55
+server=/rocksdb.org/127.0.0.1#55
+server=/whatsapp.net/127.0.0.1#55
+server=/1e100.net/127.0.0.1#55
+server=/abc.xyz/127.0.0.1#55
+server=/admob.com/127.0.0.1#55
+server=/adsense.com/127.0.0.1#55
+server=/agoogleaday.com/127.0.0.1#55
+server=/ampproject.org/127.0.0.1#55
+server=/android.com/127.0.0.1#55
+server=/androidify.com/127.0.0.1#55
+server=/api.ai/127.0.0.1#55
+server=/appspot.com/127.0.0.1#55
+server=/blog.google/127.0.0.1#55
+server=/blogspot.com/127.0.0.1#55
+server=/blogspot.co.jp/127.0.0.1#55
+server=/blogspot.co.kr/127.0.0.1#55
+server=/blogspot.hk/127.0.0.1#55
+server=/blogspot.sg/127.0.0.1#55
+server=/certificate-transparency.org/127.0.0.1#55
+server=/chrome.com/127.0.0.1#55
+server=/chromecast.com/127.0.0.1#55
+server=/chromeexperiments.com/127.0.0.1#55
+server=/chromercise.com/127.0.0.1#55
+server=/chromestatus.com/127.0.0.1#55
+server=/chromium.org/127.0.0.1#55
+server=/com.google/127.0.0.1#55
+server=/creativelab5.com/127.0.0.1#55
+server=/data-vocabulary.org/127.0.0.1#55
+server=/debug.com/127.0.0.1#55
+server=/deepmind.com/127.0.0.1#55
+server=/deja.com/127.0.0.1#55
+server=/design.google/127.0.0.1#55
+server=/digisfera.com/127.0.0.1#55
+server=/domains.google/127.0.0.1#55
+server=/environment.google/127.0.0.1#55
+server=/feedburner.com/127.0.0.1#55
+server=/g.co/127.0.0.1#55
+server=/gcr.io/127.0.0.1#55
+server=/get.how/127.0.0.1#55
+server=/getmdl.io/127.0.0.1#55
+server=/ggpht.com/127.0.0.1#55
+server=/gmail.com/127.0.0.1#55
+server=/gmodules.com/127.0.0.1#55
+server=/godoc.org/127.0.0.1#55
+server=/golang.org/127.0.0.1#55
+server=/goo.gl/127.0.0.1#55
+server=/google.com/127.0.0.1#55
+server=/google.co.jp/127.0.0.1#55
+server=/google.co.kr/127.0.0.1#55
+server=/google.co.uk/127.0.0.1#55
+server=/google.com.hk/127.0.0.1#55
+server=/google.com.sg/127.0.0.1#55
+server=/google.com.tw/127.0.0.1#55
+server=/google.de/127.0.0.1#55
+server=/google.fr/127.0.0.1#55
+server=/google.io/127.0.0.1#55
+server=/google.it/127.0.0.1#55
+server=/google.ru/127.0.0.1#55
+server=/googleapis.cn/127.0.0.1#55
+server=/googleapis.com/127.0.0.1#55
+server=/googleapps.com/127.0.0.1#55
+server=/googleartproject.com/127.0.0.1#55
+server=/googleblog.com/127.0.0.1#55
+server=/googlebot.com/127.0.0.1#55
+server=/googlecapital.com/127.0.0.1#55
+server=/googlecode.com/127.0.0.1#55
+server=/googlecommerce.com/127.0.0.1#55
+server=/googledomains.com/127.0.0.1#55
+server=/googleearth.com/127.0.0.1#55
+server=/googledrive.com/127.0.0.1#55
+server=/googlegroups.com/127.0.0.1#55
+server=/googlehosted.com/127.0.0.1#55
+server=/googleideas.com/127.0.0.1#55
+server=/googleinsidesearch.com/127.0.0.1#55
+server=/googlelabs.com/127.0.0.1#55
+server=/googlemail.com/127.0.0.1#55
+server=/googleplay.com/127.0.0.1#55
+server=/googleplus.com/127.0.0.1#55
+server=/googlesource.com/127.0.0.1#55
+server=/googlesyndication.com/127.0.0.1#55
+server=/googleusercontent.com/127.0.0.1#55
+server=/googlevideo.com/127.0.0.1#55
+server=/googleweblight.com/127.0.0.1#55
+server=/googlezip.net/127.0.0.1#55
+server=/groups.google.cn/127.0.0.1#55
+server=/gstatic.com/127.0.0.1#55
+server=/gvt0.com/127.0.0.1#55
+server=/gvt1.com/127.0.0.1#55
+server=/@@redirector.gvt1.com/127.0.0.1#55
+server=/gvt3.com/127.0.0.1#55
+server=/gwtproject.org/127.0.0.1#55
+server=/html5rocks.com/127.0.0.1#55
+server=/iam.soy/127.0.0.1#55
+server=/igoogle.com/127.0.0.1#55
+server=/itasoftware.com/127.0.0.1#55
+server=/like.com/127.0.0.1#55
+server=/madewithcode.com/127.0.0.1#55
+server=/material.io/127.0.0.1#55
+server=/nic.google/127.0.0.1#55
+server=/on2.com/127.0.0.1#55
+server=/panoramio.com/127.0.0.1#55
+server=/picasaweb.com/127.0.0.1#55
+server=/pin-cong.com/127.0.0.1#55
+server=/polymer-project.org/127.0.0.1#55
+server=/questvisual.com/127.0.0.1#55
+server=/api.recaptcha.net/127.0.0.1#55
+server=/api-secure.recaptcha.net/127.0.0.1#55
+server=/api-verify.recaptcha.net/127.0.0.1#55
+server=/redhotlabs.com/127.0.0.1#55
+server=/registry.google/127.0.0.1#55
+server=/savethedate.foo/127.0.0.1#55
+server=/schema.org/127.0.0.1#55
+server=/shattered.io/127.0.0.1#55
+server=/|sipml5.org/127.0.0.1#55
+server=/stories.google/127.0.0.1#55
+server=/synergyse.com/127.0.0.1#55
+server=/teachparentstech.org/127.0.0.1#55
+server=/tensorflow.org/127.0.0.1#55
+server=/thinkwithgoogle.com/127.0.0.1#55
+server=/tiltbrush.com/127.0.0.1#55
+server=/waveprotocol.org/127.0.0.1#55
+server=/waymo.com/127.0.0.1#55
+server=/webmproject.org/127.0.0.1#55
+server=/webrtc.org/127.0.0.1#55
+server=/whatbrowser.org/127.0.0.1#55
+server=/widevine.com/127.0.0.1#55
+server=/withgoogle.com/127.0.0.1#55
+server=/xn--ngstr-lra8j.com/127.0.0.1#55
+server=/youtu.be/127.0.0.1#55
+server=/youtube.com/127.0.0.1#55
+server=/youtube-nocookie.com/127.0.0.1#55
+server=/youtubeeducation.com/127.0.0.1#55
+server=/youtubegaming.com/127.0.0.1#55
+server=/ytimg.com/127.0.0.1#55
+server=/zynamics.com/127.0.0.1#55
+server=/a1.nyt.com/127.0.0.1#55
+server=/int.nyt.com/127.0.0.1#55
+server=/s1.nyt.com/127.0.0.1#55
+server=/static01.nyt.com/127.0.0.1#55
+server=/typeface.nyt.com/127.0.0.1#55
+server=/nytchina.com/127.0.0.1#55
+server=/nytcn.me/127.0.0.1#55
+server=/nytco.com/127.0.0.1#55
+server=/|nyti.ms/127.0.0.1#55
+server=/nytimes.com/127.0.0.1#55
+server=/nytimg.com/127.0.0.1#55
+server=/userapi.nytlog.com/127.0.0.1#55
+server=/cn.nytstyle.com/127.0.0.1#55
+server=/nytstyle.com/127.0.0.1#55
+server=/t.me/127.0.0.1#55
+server=/updates.tdesktop.com/127.0.0.1#55
+server=/telegram.dog/127.0.0.1#55
+server=/telegram.me/127.0.0.1#55
+server=/telegram.org/127.0.0.1#55
+server=/telegramdownload.com/127.0.0.1#55
+server=/page.bid.yahoo.com/127.0.0.1#55
+server=/tw.bid.yahoo.com/127.0.0.1#55
+server=/blogs.yahoo.co.jp/127.0.0.1#55
+server=/search.yahoo.co.jp/127.0.0.1#55
+server=/buy.yahoo.com.tw/127.0.0.1#55
+server=/hk.yahoo.com/127.0.0.1#55
+server=/hk.knowledge.yahoo.com/127.0.0.1#55
+server=/hk.myblog.yahoo.com/127.0.0.1#55
+server=/news.yahoo.com/127.0.0.1#55
+server=/hk.news.yahoo.com/127.0.0.1#55
+server=/hk.rd.yahoo.com/127.0.0.1#55
+server=/hk.search.yahoo.com/127.0.0.1#55
+server=/hk.video.news.yahoo.com/127.0.0.1#55
+server=/meme.yahoo.com/127.0.0.1#55
+server=/tw.answers.yahoo.com/127.0.0.1#55
+server=/tw.knowledge.yahoo.com/127.0.0.1#55
+server=/tw.mall.yahoo.com/127.0.0.1#55
+server=/tw.yahoo.com/127.0.0.1#55
+server=/tw.mobi.yahoo.com/127.0.0.1#55
+server=/tw.myblog.yahoo.com/127.0.0.1#55
+server=/tw.news.yahoo.com/127.0.0.1#55
+server=/pulse.yahoo.com/127.0.0.1#55
+server=/upcoming.yahoo.com/127.0.0.1#55
+server=/video.yahoo.com/127.0.0.1#55
+server=/yahoo.com.hk/127.0.0.1#55
+server=/duckduckgo-owned-server.yahoo.net/127.0.0.1#55
+server=/video.ap.org/127.0.0.1#55
+server=/apkpure.com/127.0.0.1#55
+server=/archives.gov/127.0.0.1#55
+server=/archive.is/127.0.0.1#55
+server=/|archive.is/127.0.0.1#55
+server=/archive.fo/127.0.0.1#55
+server=/archive.org/127.0.0.1#55
+server=/bit.ly/127.0.0.1#55
+server=/|bit.ly/127.0.0.1#55
+server=/bloombergview.com/127.0.0.1#55
+server=/c-spanvideo.org/127.0.0.1#55
+server=/chinadigitaltimes.net/127.0.0.1#55
+server=/cnn.com/127.0.0.1#55
+server=/dm530.net/127.0.0.1#55
+server=/share.dmhy.org/127.0.0.1#55
+server=/dmm.co.jp/127.0.0.1#55
+server=/dmm.com/127.0.0.1#55
+server=/dropbox.com/127.0.0.1#55
+server=/duckduckgo.com/127.0.0.1#55
+server=/api.dropboxapi.com/127.0.0.1#55
+server=/dropboxusercontent.com/127.0.0.1#55
+server=/dw.com/127.0.0.1#55
+server=/dw.de/127.0.0.1#55
+server=/dw-world.com/127.0.0.1#55
+server=/dw-world.de/127.0.0.1#55
+server=/|dw-world.de/127.0.0.1#55
+server=/economist.com/127.0.0.1#55
+server=/fanqianghou.com/127.0.0.1#55
+server=/fc2.com/127.0.0.1#55
+server=/flipboard.com/127.0.0.1#55
+server=/gettyimages.com/127.0.0.1#55
+server=/git.io/127.0.0.1#55
+server=/gov.tw/127.0.0.1#55
+server=/hulu.com/127.0.0.1#55
+server=/huluim.com/127.0.0.1#55
+server=/idv.tw/127.0.0.1#55
+server=/ifanqiang.com/127.0.0.1#55
+server=/j.mp/127.0.0.1#55
+server=/kakao.com/127.0.0.1#55
+server=/kik.com/127.0.0.1#55
+server=/imgur.com/127.0.0.1#55
+server=/line.me/127.0.0.1#55
+server=/line-apps.com/127.0.0.1#55
+server=/line-scdn.net/127.0.0.1#55
+server=/onedrive.live.com/127.0.0.1#55
+server=/medium.com/127.0.0.1#55
+server=/mobile01.com/127.0.0.1#55
+server=/|mobile01.com/127.0.0.1#55
+server=/line.naver.jp/127.0.0.1#55
+server=/|www.nbc.com/127.0.0.1#55
+server=/netflix.com/127.0.0.1#55
+server=/nextmedia.com/127.0.0.1#55
+server=/nflximg.com/127.0.0.1#55
+server=/nflximg.net/127.0.0.1#55
+server=/nflxext.com/127.0.0.1#55
+server=/nflxso.net/127.0.0.1#55
+server=/nflxvideo.net/127.0.0.1#55
+server=/|dynupdate.no-ip.com/127.0.0.1#55
+server=/nyaa.si/127.0.0.1#55
+server=/on.cc/127.0.0.1#55
+server=/reuters.com/127.0.0.1#55
+server=/pastebin.com/127.0.0.1#55
+server=/video.pbs.org/127.0.0.1#55
+server=/pinterest.com/127.0.0.1#55
+server=/pixiv.net/127.0.0.1#55
+server=/rfi.fr/127.0.0.1#55
+server=/scmp.com/127.0.0.1#55
+server=/shadowsocks.org/127.0.0.1#55
+server=/shutterstock.com/127.0.0.1#55
+server=/snapchat.com/127.0.0.1#55
+server=/spotify.com/127.0.0.1#55
+server=/static-economist.com/127.0.0.1#55
+server=/t.co/127.0.0.1#55
+server=/theinitium.com/127.0.0.1#55
+server=/tumblr.com/127.0.0.1#55
+server=/forum.tvb.com/127.0.0.1#55
+server=/news.tvb.com/127.0.0.1#55
+server=/news.tvbs.com.tw/127.0.0.1#55
+server=/twimg.com/127.0.0.1#55
+server=/twitter.com/127.0.0.1#55
+server=/vid.me/127.0.0.1#55
+server=/vimeo.com/127.0.0.1#55
+server=/w3schools.com/127.0.0.1#55
+server=/wenxuecheng.com/127.0.0.1#55
+server=/wikileaks.ch/127.0.0.1#55
+server=/wikileaks.com/127.0.0.1#55
+server=/wikileaks.de/127.0.0.1#55
+server=/wikileaks.eu/127.0.0.1#55
+server=/wikileaks.lu/127.0.0.1#55
+server=/wikileaks.org/127.0.0.1#55
+server=/wikileaks.pl/127.0.0.1#55
+server=/wikileaks-forum.com/127.0.0.1#55
+server=/zh.wikinews.org/127.0.0.1#55
+server=/wuu.wikipedia.org/127.0.0.1#55
+server=/zh.m.wikipedia.org/127.0.0.1#55
+server=/zh.wikipedia.org/127.0.0.1#55
+server=/zh-yue.wikipedia.org/127.0.0.1#55
+server=/wsj.com/127.0.0.1#55
+server=/x-art.com/127.0.0.1#55
