--- a/etc/redsocks.conf
+++ b/etc/redsocks.conf
@@ -79,8 +79,8 @@ redsocks {
 	// `ip' and `port' of socks5 proxy server.
 //	ip = 127.0.0.1;
 //	port = 49080;
-	# login = username;
-	# password = pazzw0rd;
+//	login = username;
+//  password = pazzw0rd;
 
 	// redsocks knows about two options while redirecting UDP packets at
 	// linux: TPROXY and REDIRECT.  TPROXY requires more complex routing
