--- a/server/danted.conf
+++ b/server/danted.conf
@@ -45,12 +45,13 @@ logoutput: stderr
 # The server will bind to the address 10.1.1.1, port 1080 and will only
 # accept connections going to that address.
 #internal: 10.1.1.1 port = 1080
+internal: 127.0.0.1 port = 1080
 # Alternatively, the interface name can be used instead of the address.
 #internal: eth0 port = 1080
 
 # all outgoing connections from the server will use the IP address
 # 195.168.1.1
-#external: 192.168.1.1
+external: eth0
 
 # list over acceptable authentication methods, order of preference.
 # An authentication method not set here will never be selected.
@@ -61,9 +62,11 @@ logoutput: stderr
 
 # methods for socks-rules.
 #socksmethod: username none #rfc931
+socksmethod: none
 
 # methods for client-rules.
 #clientmethod: none
+clientmethod: none
 
 #or if you want to allow rfc931 (ident) too
 #socksmethod: username rfc931 none
@@ -170,9 +173,9 @@ user.libwrap: nobody
 # This is identical to above, but allows clients without a rfc931 (ident)
 # too.  In practice this means the socks server will try to get a rfc931
 # reply first (the above rule), if that fails, it tries this rule.
-#client pass {
-#        from: 10.0.0.0/8 port 1-65535 to: 0.0.0.0/0
-#}
+client pass {
+        from: 0.0.0.0/0 port 1-65535 to: 0.0.0.0/0
+}
 
 
 # drop everyone else as soon as we can and log the connect, they are not
@@ -215,11 +218,11 @@ user.libwrap: nobody
 # should usually by from "0.0.0.0/0", i.e if a client of yours
 # has permission to bind, it will also have permission to accept
 # the reply from anywhere.
-#socks pass {
-#        from: 10.0.0.0/8 to: 0.0.0.0/0
+socks pass {
+        from: 0.0.0.0/0 to: 0.0.0.0/0
 #        command: bind
-#        log: connect error
-#}
+        log: connect error
+}
 
 # some connections expect some sort of "reply", this might be
 # the reply to a bind request or it may be the reply to a
